# dmPython

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cursor.c  LICENSE  MANIFEST.in  Makefile  README.md  README_zh.md  TECHNICAL_REPORT.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  test_connection.py  var.c
.github/workflows/: build-wheels.yml  docs-pages.yml  integration-tests.yml  workflow-lint.yml
docs/: README_zh.md  api-reference.md  faq.md  index.md  installation.md  migration.md  quickstart.md  release-checklist.md
docs/examples/: basic-crud.md  bulk-insert.md  connection-pool.md  lob-handling.md  stored-proc.md
docs/examples/scripts/: basic_crud.py  bulk_insert.py  connection_pool.py  lob_handling.py  stored_proc.py
dpi_bridge/: dpi_bind.go  dpi_conn.go  dpi_desc.go  dpi_diag.go  dpi_env.go  dpi_fetch.go  dpi_lob.go  dpi_meta.go  dpi_obj.go  dpi_stmt.go  go.mod  go.sum  handle.go  main.go  types.go
scripts/: check_third_party_patch.py  check_version_consistency.py  check_workflow_yaml.py  install_docs_workflow.sh  release_preflight.sh  test_connection.py
src/native/: Connection.c  Cursor.c  Environment.c  exObject.c  py_Dameng.c  py_Dameng.h  strct.h  trc.c  trc.h  vLob.c  vNumber.c
tests/: conftest.py  test_dm_integration.py  test_version_metadata.py
tests/integration/: test_p0_clob_unicode_regression.py  test_p0_data_at_exec_matrix.py  test_p0_lob_boundary.py  test_p0_stability.py  test_p1_contract.py  test_p1_contract_ext.py  test_p1_cursor_state_contract.py  test_p2_resilience_ext.py  test_p2_scale.py  test_p2_scale_ext.py
