[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmPython-macOS"
version = "2.5.30"
description = "Python DB-API 2.0 driver for DM (Dameng) database — macOS edition with built-in Go bridge"
readme = "README.md"
license = {text = "MulanPSL-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
keywords = ["Dameng", "DM8", "database", "DB-API"]

[tool.setuptools]
py-modules = []
packages = []
